--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
   <head>
     <meta charset="utf-8">
-    <title>This is a website</title>
+    <title>Spes</title>
     <link rel="stylesheet" href="style.css">
   </head>
 
